// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN request: OpenAI → Claude > full body (system/image/tool/tool_result) 1`] = `
{
  "max_tokens": 64000,
  "messages": [
    {
      "content": [
        {
          "text": "What's in this image?",
          "type": "text",
        },
        {
          "source": {
            "data": "IMGDATA",
            "media_type": "image/png",
            "type": "base64",
          },
          "type": "image",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "cache_control": {
            "type": "ephemeral",
          },
          "id": "call_1",
          "input": {
            "city": "NYC",
          },
          "name": "get_weather",
          "type": "tool_use",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "content": "sunny",
          "tool_use_id": "call_1",
          "type": "tool_result",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-opus-4-6",
  "stream": true,
  "system": [
    {
      "text": "You are Claude Code, Anthropic's official CLI for Claude.",
      "type": "text",
    },
    {
      "cache_control": {
        "ttl": "1h",
        "type": "ephemeral",
      },
      "text": "You are helpful.",
      "type": "text",
    },
  ],
  "temperature": 0.7,
  "tools": [
    {
      "cache_control": {
        "ttl": "1h",
        "type": "ephemeral",
      },
      "description": "Get weather",
      "input_schema": {
        "properties": {
          "city": {
            "type": "string",
          },
        },
        "required": [
          "city",
        ],
        "type": "object",
      },
      "name": "get_weather",
    },
  ],
}
`;

exports[`GOLDEN request: OpenAI → Claude > reasoning_effort → adaptive output_config (claude 4.6+) 1`] = `
{
  "max_tokens": 64000,
  "messages": [
    {
      "content": [
        {
          "text": "hi",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "model": "claude-opus-4-6",
  "output_config": {
    "effort": "high",
  },
  "stream": true,
  "system": [
    {
      "cache_control": {
        "ttl": "1h",
        "type": "ephemeral",
      },
      "text": "You are Claude Code, Anthropic's official CLI for Claude.",
      "type": "text",
    },
  ],
}
`;

exports[`GOLDEN request: OpenAI → Gemini > full body (system/image/tool/tool_result) 1`] = `
{
  "messages": [
    {
      "content": "You are helpful.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "What's in this image?",
          "type": "text",
        },
        {
          "image_url": {
            "detail": "high",
            "url": "data:image/png;base64,IMGDATA",
          },
          "type": "image_url",
        },
      ],
      "role": "user",
    },
    {
      "content": "",
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{"city":"NYC"}",
            "name": "get_weather",
          },
          "id": "call_1",
          "type": "function",
        },
      ],
    },
    {
      "content": "sunny",
      "role": "tool",
      "tool_call_id": "call_1",
    },
  ],
  "temperature": 0.7,
  "tools": [
    {
      "function": {
        "description": "Get weather",
        "name": "get_weather",
        "parameters": {
          "properties": {
            "city": {
              "type": "string",
            },
          },
          "required": [
            "city",
          ],
          "type": "object",
        },
      },
      "type": "function",
    },
  ],
}
`;

exports[`GOLDEN request: OpenAI → Kiro > full body (image base64 + tool_result) 1`] = `
{
  "messages": [
    {
      "content": "You are helpful.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "What's in this image?",
          "type": "text",
        },
        {
          "image_url": {
            "detail": "high",
            "url": "data:image/png;base64,IMGDATA",
          },
          "type": "image_url",
        },
      ],
      "role": "user",
    },
    {
      "content": "",
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{"city":"NYC"}",
            "name": "get_weather",
          },
          "id": "call_1",
          "type": "function",
        },
      ],
    },
    {
      "content": "sunny",
      "role": "tool",
      "tool_call_id": "call_1",
    },
  ],
  "temperature": 0.7,
  "tools": [
    {
      "function": {
        "description": "Get weather",
        "name": "get_weather",
        "parameters": {
          "properties": {
            "city": {
              "type": "string",
            },
          },
          "required": [
            "city",
          ],
          "type": "object",
        },
      },
      "type": "function",
    },
  ],
}
`;
